# Maverick

./: .gitignore  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_QUALITY_AUDIT.md  CODE_REVIEW_2026-06.md  CONTRIBUTING.md  COUNCIL_AUDIT_2026-06.md  ENTERPRISE_BLOCKERS_AUDIT.md  FIXES.md  IMPROVEMENT_AUDIT_2026-06.md  LAUNCH_AUDIT.md  LAUNCH_CHECKLIST.md  LICENSE  MAINTAINERS.md  PUNCHLIST_RESOLUTION.md  README.md  SECURITY.md  STRESS_TEST.md  THIRD-PARTY-NOTICES.md  TRADEMARK.md  conftest.py  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: agent-on-pr.yml  build-msi.yml  ci.yml  compliance-posture.yml  conventional-commits.yml  desktop.yml  docs.yml  github-action.yml  go-model-proxy.yml  homebrew-bump.yml  mcp-client-csharp.yml  mcp-client-java.yml  mcp-client-rust.yml  mcp-clients.yml  native.yml  publish.yml  release.yml
apps/desktop/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/emacs/: README.md  maverick.el
apps/installer-cli/: README.md  pyproject.toml
apps/installer-desktop/: README.md  index.html  package.json
apps/installer-msi/: Package.wxs  README.md  build.ps1  maverick.cmd  test_wxs.py
apps/jetbrains-plugin/: README.md
apps/mobile-companion/: App.tsx  README.md  app.json  package.json  tsconfig.json
apps/mobile-skills/: README.md  test_mobile_skills.py
apps/nvim/: README.md
apps/visionos-plan-tree/: README.md
apps/vscode-extension/: README.md  package.json
apps/watch-glance/: README.md
apps/zed-extension/: Cargo.toml  README.md  extension.toml
apps/zed-extension/src/: lib.rs
apps/zed-extension/tasks/: maverick.json
benchmarks/: EVAL.md  GOVERNANCE_RESULTS.md  MOAT_RIGOROUS_RESULTS.md  README.md  RUNBOOK_SWE_BENCH_PRO.md  agent_solver.py  container_terminal_solver.py  eval_adversarial_cost.py  eval_gaia.py  eval_governance.py  eval_smoke.py  eval_tau2.py  eval_terminal_bench.py  evals.py  harness.py  moat.py  moat_preflight.py  moat_rigorous.py  preflight.py  recall_precision.py  run_eval.py  swe_bench.py  tau2_solver.py  terminal_solver.py  test_agent_solver.py  test_container_terminal_solver.py  test_contamination_corpus.py  test_contamination_wiring.py  test_cost_accumulation.py  test_eval_adversarial_cost.py  test_eval_governance.py  test_eval_smoke.py  test_eval_tau2.py  test_eval_terminal_bench.py  test_evals.py  test_harness.py  test_harness_agent_column.py  test_manifests_and_tracker.py  test_moat.py  test_moat_preflight.py  (+10 more)
benchmarks/_common/: contamination_guard.py  leaked_briefs.txt
benchmarks/eval_fixtures/: container_terminal_hard.jsonl  gaia_sample.jsonl  tau2_retail_hard.jsonl  tau2_retail_sample.jsonl  terminal_bench_hard.jsonl  terminal_bench_sample.jsonl
benchmarks/example-skills/: README.md
benchmarks/example-templates/: README.md
benchmarks/security/: README.md  RESULTS.md  RESULTS_E2E.md  RUNBOOK_SECURITY.md  corpus.py  detector_score.py  end_to_end_asr.py  latency_bench.py  test_detector_smoke.py
deploy/: verify-release.sh
deploy/demo/: .gitignore  Caddyfile  README.md  demo.env.example  docker-compose.yml  fly.toml  render.yaml  run-demo.sh
deploy/desktop/: README.md  install.ps1  install.sh
deploy/docker/: Dockerfile  docker-compose.yml
deploy/firecracker/: README.md  build-rootfs.sh  fetch-kernel.sh
deploy/github-action/: README.md  action.yml
deploy/gitlab-ci/: README.md  maverick.gitlab-ci.yml
deploy/helm/: README.md
deploy/homebrew/: maverick.rb
deploy/multiarch/: Dockerfile.multiarch  README.md  build.sh
deploy/observability/: grafana-dashboard.json  runbook.md  (+1 more)
docs/: DISCLOSURES.md  FEATURES.md  LAUNCH_READINESS.md  ROADMAP-2029-2031.md  ROADMAP-ADDITIONS.md  ROADMAP.md  a2a.md  api.md  architecture.md  billing.md  comparison.md  compliance-assessments.md  configuration.md  connectors.md  deployment.md  embedding.md  encryption.md  env-vars.md  getting-started.md  github-action.md  grpc.md  handbook.md  index.md  migration-2.0.md  multi-tenancy.md  operations.md  palantir-playbook.md  perf-sla.md  plugin-api-v2.md  plugins.md  press-kit.md  product-portfolio.md  reference-architectures.md  regulated-deployment.md  release-checklist-2.0.md  safety.md  security-backports.md  security-hardening.md  self-harness-proof.md  self-hosted-relay.md  (+8 more)
pitch/: AUDIENCE-B.md  AUDIENCE-C.md  DEMO-SCRIPT.md  MANIFESTO.html  ONE-PAGER.md  PRODUCT-LINE.md  README.md  SEED-DECK.md
proof/: run_proof.py  self_harness_proof.py
rust/: .gitignore  Cargo.toml  README.md
rust/maverick-verify-audit/: Cargo.toml  README.md
rust/maverick-verify-audit/src/: canonical.rs  lib.rs  main.rs
rust/maverick-verify-audit/tests/: parity.py
rust/mvk-scan/: Cargo.toml
rust/mvk-scan-py/: Cargo.toml  pyproject.toml
rust/mvk-scan-py/src/: lib.rs
rust/mvk-scan-wasm/: Cargo.toml
rust/mvk-scan-wasm/src/: lib.rs
rust/mvk-scan-wasm/test/: detect.parity.test.mjs  parity.test.mjs
rust/mvk-scan/src/: lib.rs  phash.rs  pii.rs  secret.rs
scripts/: pre-push-lint.sh  train_runpod.sh
skills/: cbam-embedded-emissions-calc.md  cbom-generate.md  citation-shepardize-verify.md  cite-sources-or-mark-unverified.md  competitor-teardown.md  data-contract-author.md  decision-memo-saspe.md  dual-sourcing-tariff-scenario.md  ephemeral-data-preservation-map.md  escheatment-dormancy-run.md  frand-rate-benchmark.md  incident-postmortem-5whys.md  irrbb-eve-nii-shock.md  lcr-hqla-classification.md  llm-eval-harness-build.md  mcp-tool-poisoning-scan.md  model-artifact-verify.md  nhi-credential-rotation-runbook.md  nrr-bridge-build.md  okr-drafting.md  pay-equity-regression.md  pqc-readiness-inventory.md  pql-scoring-model.md  prompt-injection-tabletop.md  redact-secrets-in-output.md  slo-error-budget-policy.md  stakeholder-raci-map.md  suppression-list-reconcile.md  swot-and-portering.md
web/: README.md  index.html
(+346 files in other folders)
