[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "maverick-native"
version = "0.1.0"
description = "Native (Rust) safety scanners for Maverick — Python binding."
requires-python = ">=3.10"
classifiers = ["Programming Language :: Rust"]

[tool.maturin]
module-name = "maverick_native"
# abi3 wheel works across CPython 3.10+; one wheel per platform, not per minor.
features = ["pyo3/extension-module"]
