[package]
name = "mvk-scan-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wasm-bindgen binding for the Maverick native safety scanners (TypeScript / edge)."

[lib]
crate-type = ["cdylib"]

[dependencies]
mvk-scan = { path = "../mvk-scan" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# The wasm-opt (binaryen) post-pass is an optional size optimization; disable it
# so the build is hermetic and doesn't need to download a binaryen release.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
