[package]
name = "maverick-desktop"
version = "0.1.6"
edition = "2021"
description = "Tauri shell that embeds the local Maverick dashboard"
authors = ["cdayAI"]
license = "LicenseRef-Proprietary"
repository = "https://github.com/Day-AI-Labs/maverick"

[lib]
name = "maverick_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Standard Tauri v2 layout (mirrors apps/installer-desktop): logic in
# lib.rs (run()), thin main.rs binary declared explicitly so `tauri build`
# has a binary target.
[[bin]]
name = "maverick-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
